# agent-skills

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md
.claude/: settings.local.json
.claude/hooks/: instructions_loaded.sh  post_tool_guard.sh  pre_tool_guard.sh  stop_ledger_check.sh
.codex/environments/: environment.toml
commands/: README.md
commands/claude/: .gitkeep
commands/codex/: .gitkeep
commands/shared/: .gitkeep
docs/: agent-handbook.md  content-part-model.md  prd-session-browser.md
docs/architecture/: overview.md
docs/governance/: tool-usage.md
docs/migration/: README.md  agent-tools-migration.md  path-forward.md
docs/verification/: README.md
feipi-scripts/repo/: init_skill.sh  install_skills.sh  install_skills_links.sh  quick_validate.sh  run_skill_test.sh
harness/: manifest.yaml
rules/: README.md
runtimes/fastmcp/: ARCHITECTURE.md  README.md  __init__.py  pyproject.toml  runtime.py
runtimes/fastmcp/gateway/: registry.py  server.py  start-background.sh  start.sh
runtimes/fastmcp/scripts/: test_searxng_mcp.sh
runtimes/fastmcp/searxng/src/: __init__.py  schemas.py  searxng_client.py  server.py
runtimes/fastmcp/shared/: common.py  config.py
runtimes/fastmcp/templates/python/: README.md  pyproject.toml
runtimes/fastmcp/templates/python/scripts/: start.sh
runtimes/fastmcp/templates/python/src/: __init__.py  client.py  config.py  schema.py  server.py
runtimes/fastmcp/templates/python/tests/: test_server.py
scripts/: init_skill.sh  install_skills.sh  install_skills_links.sh  quick_validate.sh  run_skill_test.sh
skills/: registry.yaml
templates/: SKILL.template.md  subagent-dispatch-template.md
tools/crawl/crawl4ai-mcp/: README.md  pyproject.toml
tools/crawl/crawl4ai-mcp/env/: .env.example
tools/crawl/crawl4ai-mcp/scripts/: run.sh
tools/crawl/crawl4ai-mcp/src/: __init__.py  client.py  config.py  schema.py  server.py
tools/crawl/crawl4ai-mcp/tests/: test_server.py
(+522 files in other folders)
