[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-runtime"
version = "0.1.0"
description = "FastMCP 运行时框架 - 统一的 MCP 服务管理"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Agent Skills", email = "agent-skills@example.com"}
]
keywords = ["mcp", "fastmcp", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["runtimes.fastmcp*"]

[tool.ruff]
line-length = 100
target-version = "py310"
